# carma-models

./: README.md  carma-models.cabal
examples/: Sync.hs  Test.hs  Test2.hs  Test3.hs  Update.hs
src/: Model.hs
src/Model/: Action.hs  Base.hs  Call.hs  Case.hs  Groups.hs  Partner.hs  Serialization.hs
src/Model/Groups/: Address.hs  Bill.hs  Car.hs  CarContact.hs  CardNumber.hs  Contact.hs  CountedCost.hs  Partner.hs  Payment.hs  Times.hs  VinCar.hs  VinContact.hs
