name:                carma-models
version:             0.2.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/mvoidex/carma-models
license:             BSD3
license-file:        LICENSE
author:              Alexandr `Voidex` Ruchkin
maintainer:          voidex@live.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:
    Model
    Model.Base
    Model.Serialization
    Model.Groups
    Model.Groups.Address
    Model.Groups.Bill
    Model.Groups.Car
    Model.Groups.CarContact
    Model.Groups.CardNumber
    Model.Groups.Contact
    Model.Groups.CountedCost
    Model.Groups.Partner
    Model.Groups.Payment
    Model.Groups.Times
    Model.Groups.VinCar
    Model.Groups.VinContact
    Model.Action
    Model.Call
    Model.Case
    Model.Partner
  other-modules:
  build-depends:
    base >= 4.5 && < 6,
    text == 0.11.*,
    time == 1.4.*,
    bytestring == 0.10.*,
    aeson == 0.6.*,
    containers == 0.5.*,
    unordered-containers == 0.2.*,
    mtl >= 2.0 && < 2.2,
    attoparsec == 0.10.*,
    data-serialization == 0.2.*,
    data-serialization-attoparsec == 0.2.*,
    data-serialization-dictionary == 0.2.*,
    data-serialization-aeson == 0.2.*,
    data-serialization-postgresql == 0.2.*,
    postgresql-simple == 0.2.*

executable test
  hs-source-dirs: examples
  main-is: Test.hs
  build-depends:
    base >= 4.5 && < 6,
    aeson == 0.6.*,
    hedis == 0.6.*,
    text == 0.11.*,
    containers == 0.5.*,
    bytestring == 0.10.*,
    time == 1.4.*,
    transformers == 0.3.*,
    carma-models == 0.2.*,
    data-serialization == 0.2.*,
    data-serialization-postgresql == 0.2.*,
    data-serialization-aeson == 0.2.*,
    postgresql-simple == 0.2.*

executable test2
  hs-source-dirs: examples
  main-is: Test2.hs
  build-depends:
    base >= 4.5 && < 6,
    hedis == 0.6.*,
    containers == 0.5.*,
    bytestring == 0.10.*,
    carma-models == 0.2.*,
    data-serialization == 0.2.*,
    data-serialization-postgresql == 0.2.*,
    postgresql-simple == 0.2.*

executable test3
  hs-source-dirs: examples
  main-is: Test3.hs
  build-depends:
    base >= 4.5 && < 6,
    containers == 0.5.*,
    bytestring == 0.10.*,
    carma-models == 0.2.*,
    data-serialization == 0.2.*,
    data-serialization-postgresql == 0.2.*,
    postgresql-simple == 0.2.*

executable sync
  hs-source-dirs: examples
  main-is: Sync.hs
  build-depends:
    base >= 4.5 && < 6,
    hedis == 0.6.*,
    containers == 0.5.*,
    bytestring == 0.10.*,
    carma-models == 0.2.*,
    data-serialization == 0.2.*,
    data-serialization-postgresql == 0.2.*,
    postgresql-simple == 0.2.*
